Added Local Binder to LocationServices (Google, Android)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,8 @@
     <string name="speed">Speed</string>
     <string name="wind_direction">WSW</string>
     <string name="wind_speed">23 km/hour</string>
+    <string name="permission_rationale">Location permission is needed for core functionality</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core  functionality</string>
+    <string name="settings">Settings</string>
 
 </resources>
