--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,10 @@
     <string name="wind_direction">WSW</string>
     <string name="wind_speed">23 km/hour</string>
     <string name="permission_rationale">Location permission is needed for core functionality</string>
-    <string name="permission_denied_explanation">Permission was denied, but is needed for core  functionality</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality</string>
     <string name="settings">Settings</string>
+    <string name="ok">OK</string>
+    <string name="unknown_location">Unknown Location</string>
+    <string name="no_location_detected">No location detected. Make sure location is enabled on the device</string>
 
 </resources>
