--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,6 @@
     <string name="settings">Settings</string>
     <string name="ok">OK</string>
     <string name="unknown_location">Unknown Location</string>
-    <string name="no_location_detected">No location detected. Make sure location is enabled on the device</string>
+    <string name="no_location_detected">No last location detected</string>
 
 </resources>
